--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             </div>
         </div>
         <hr class="socket">
-        <p class=" footer-note text-center m-0 d-flex align-items-center justify-content-center">&copy; Dr Goyal's Dental Clinic and Implant Center. 2020</p>
+        <p class=" footer-note text-center m-0 d-flex align-items-center justify-content-center">Copyright &copy; 2020 Dr Goyal's Dental Clinic and Implant Center. All rights reserved.</p>
     </footer>
 
 
